--- a/html/components/sheets-tab/index.html
+++ b/html/components/sheets-tab/index.html
@@ -1,22 +1,18 @@
-<div class="SheetSelector">
-  <select sbCall="selectSheets">
-    <option value="">No Sheet Selected</option>
-    <option value="[Team='1'] .SKS" sbDisplay="Team(1).Name: appendScores">Team 1 Scores</option>
-    <option value="[Team='2'] .SKS" sbDisplay="Team(2).Name: appendScores">Team 2 Scores</option>
-    <option value=".SKS">Both Scores</option>
-    <option value="[Team='1'] .PTS" sbDisplay="Team(1).Name: appendPenalties">Team 1 Penalties</option>
-    <option value="[Team='2'] .PTS" sbDisplay="Team(2).Name: appendPenalties">Team 2 Penalties</option>
-    <option value=".PTS">Both Penalties</option>
-    <option value="[Team='1'] .LTS" sbDisplay="Team(1).Name: appendLineups">Team 1 Lineups</option>
-    <option value="[Team='2'] .LTS" sbDisplay="Team(2).Name: appendLineups">Team 2 Lineups</option>
-    <option value=".LTS">Both Lineups</option>
-    <option value="[Team='1'] .SKS, [Team='1'] .LTS" sbDisplay="Team(1).Name: appendScoreAndLineups">Team 1 Score + Lineups</option>
-    <option value="[Team='2'] .SKS, [Team='2'] .LTS" sbDisplay="Team(2).Name: appendScoreAndLineups">Team 2 Score + Lineups</option>
-  </select>
+<div class="SheetSelector sbSegment">
+  <div class="sbGroup">
+    <div class="Selectors">
+      <div sbForeach="Team: 1,2: only" class="TeamWrapper">
+        <span class="Name"><span sbDisplay="Name:"></span>:</span>
+        <button sbCall="shtSelectSheet">Scores</button>
+        <button sbCall="shtSelectSheet">Lineups</button>
+        <button sbCall="shtSelectSheet">Penalties</button>
+      </div>
+    </div>
+  </div>
 </div>
 
-<div sbForeach="Team: 1,2: only" sbSheetStyle="sheet">
-  <div sbInclude="/components/sk-sheet/" class="Sheet SKS sbHide"></div>
-  <div sbInclude="/components/plt-input/" class="Sheet PTS sbHide"></div>
-  <div sbInclude="/components/lt-sheet/" class="Sheet LTS sbHide"></div>
+<div class="sbSegmentGroup" sbSheetStyle="sheet">
+  <div sbForeach="Team: 1,2: only" sbInclude="/components/sk-sheet/" class="Sheet Scores sbHide"></div>
+  <div sbForeach="Team: 1,2: only" sbInclude="/components/lt-sheet/" class="Sheet Lineups sbHide"></div>
+  <div sbForeach="Team: 1,2: only" sbInclude="/components/plt-input/" class="Sheet Penalties sbHide"></div>
 </div>
