--- a/html/views/roster/index.html
+++ b/html/views/roster/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="/json/core.js"></script>
   </head>
   <body>
-    <a id="sbIndexLink" href="/" class="ui-widget ui-widget-content" style="float: right; border: none">Back to index page</a>
+    <a id="sbIndexLink" href="/" class="ui-widget ui-widget-content">Back to index page</a>
     <div sbInclude="/components/roster-tab/" class="ui-widget"></div>
   </body>
 </html>
