--- a/html/components/lt-sheet/index.css
+++ b/html/components/lt-sheet/index.css
@@ -1,38 +1,23 @@
-.LT { font-size: 11pt; } 
-table.LT, .LT table,.LT tr, .LT td { border-collapse: collapse; border-color:#777; } 
-body:not(.AllowSelect) .LT { user-select: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -o-user-select: none; } 
-.LT tr { color: #333; height: 31px; } 
-div.LT { font-size: 200%; text-align: center; background-color: #cccccc; color: #333333; margin-top: 1em; margin-right: 1px; } 
-.LT.Period { width: 100%; table-layout:fixed; margin-top: 0.5em; margin-right: 1px; } 
-.LT.Period thead td { font-size: 95%; background-color: #cccccc; color: #333333; } 
-.LT.Period td { text-align: center; vertical-align: middle; } 
-.LT.Period { background-color: #FFF; } 
-.LT.Period .Darker { background-color: #e7f3ff; } 
-.LT.Period .Darker .Darker { background-color: #cee7ff; } 
-.LT.Period tbody td.Box { background-color: #b6daff; }
-[sbSheetStyle]:not([sbSheetStyle="sheet"]) .LT.Period tr.SP td, [sbSheetStyle]:not([sbSheetStyle="sheet"]) .LT.Period tr.INJ td  { border-bottom-style: dotted; } 
-[sbSheetStyle="sheet"] .LT.Period tr.SP td, [sbSheetStyle="sheet"] .LT.Period tr.INJ td { border-top-style: dotted; } 
-.LT.Period .JamNumber { width: 30px; } 
-[sbSheetStyle]:not([sbSheetStyle="sheet"]) .LT.Period .CopyArrow::before { position: absolute; left: 10px; content: "⮬";color: #777; }
-.LT.Period .NP { width: 25px; } 
-.LT.Period .Skater { width: 12%; } 
-.LT.Period .Box { width: 8%; } 
-.LT.Period .hasAnnotation { position: relative; } 
-.LT.Period .hasAnnotation::after { position: absolute; right: 2px; top: 2px; height: 5px; width: 5px; background-color: red; content: ""; } 
-.LT.Period:Not(.Current) .Upcoming { display: none; }
+/* Sizes */
+.LtSheet tr { height: 35px; } 
+.LtSheet thead>tr { height: 20px; } 
+.LtSheet>.Period .JamNumber { width: 30px; } 
+.LtSheet>.Period .NP { width: 25px; } 
+.LtSheet>.Period .Skater { width: 12%; } 
+.LtSheet>.Period .Box { width: 8%; } 
+.LtSheet>.Period:Not(.Current) .Upcoming { display: none; }
+[sbSheetStyle="sheet"] .LtSheet>.Period .Upcoming { display: none; }
 
-#FieldingEditor { font-size: 11pt; } 
-table#FieldingEditor, #FieldingEditor tr, #FieldingEditor td { border-collapse: collapse; border-color:#777; } 
-#FieldingEditor .tripHeader { text-align: center; font-size: 95%; background-color: #222; color: #FFF; } 
-#FieldingEditor .ButtonCell { text-align: center; } 
-#FieldingEditor .ui-button { font-size: 75%; } 
-#FieldingEditor .ui-controlgroup { text-align: center; } 
-#FieldingEditor .ui-controlgroup>button { border-radius: 0; margin: 0; } 
-#FieldingEditor .ui-controlgroup>button:first-of-type { border-radius: 6px 0px 0px 6px; } 
-#FieldingEditor .ui-controlgroup>button:last-of-type { border-radius: 0px 6px 6px 0px; } 
-#FieldingEditor .ui-controlgroup>button:only-of-type { border-radius: 6px; } 
-#FieldingEditor .ui-controlgroup>button { padding: 0.4em 0.5em; } 
+/* header row */
+.LtSheet>.Period th { font-size: 95%; background-color: #cccccc; color: #333333; } 
 
-#FieldingEditor .BoxTrip>td, #FieldingEditor .Skater>td { padding: 0.5em 0em; } 
+/* Colors & Borders*/
+.LtSheet>.Period { background-color: #FFF; } 
+.LtSheet>.Period .Darker { background-color: #e7f3ff; } 
+.LtSheet>.Period .Darker .Darker { background-color: #cee7ff; } 
+.LtSheet>.Period td.Box { background-color: #b6daff; }
 
-#sitFor3, #notFielded { color: #000; padding: .3em .6em; } 
+#FieldingEditor .Skater { flex-wrap: wrap; gap: 0.5em; }
+#FieldingEditor td.Earlier { text-align: right; width: 80px; }
+#FieldingEditor td.Later { text-align: left; width: 80px; }
+#FieldingEditor td.Text { width: 100px; }
