--- a/html/components/sk-sheet/index.css
+++ b/html/components/sk-sheet/index.css
@@ -1,58 +1,48 @@
-.SkSheet, #TripEditor { font-size: 11pt; } 
-.SkSheet { flex-wrap: wrap; gap: 1em; }
-.SkSheet>.Period { width: calc(100% - 12px); table-layout:fixed; margin: auto; } 
-.SkSheet>table.Period, .SkSheet td, #TripEditor table, #TripEditor tr, #TripEditor td { border-collapse: collapse; border-color:#777; } 
-body:not(.AllowSelect) .SkSheet { user-select: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -o-user-select: none; } 
-.SkSheet tr { color: #333; } 
-.SkSheet>.Period tr.Edit .EditButton .ui-button { background: #3f3; }
-.SkSheet>.Period tr.Edits:not(.Edit) { display: none; }
-.SkSheet>.Period tr:not(.Edit) .EditOnly { display: none; }
-.SkSheet>.Period tr.IgnoreEdit .EditOnly { display: none; }
-.SkSheet>.Period tr.Edit .NoEditOnly { display: none; }
-.SkSheet>.Period td:not(.Used) > .UsedOnly { display: none; }
-.SkSheet>.Period td:not(.OtherUsed) > .OtherUsedOnly { display: none; }
-.SkSheet>.Period td.Used > .FirstUnusedOnly { display: none; }
-.SkSheet>.Period td.OtherUsed > .FirstUnusedOnly { display: none; }
-.SkSheet>.Period td:not(.Used) + td > .FirstUnusedOnly { display: none; }
-.SkSheet>.Period tr.HasSP .AddSP { display: none; }
-.SkSheet>.Period tr:not(.HasSP) .InitialSP { display: none; }
-.SkSheet>.Period tr:not(.IsOR) .OROnly { display:none; }
-.SkSheet>.Period thead td { font-size: 85%; background-color: #cccccc; color: #333333; } 
+/* Sizes */
+.SkSheet>.Period tr { height: 35px; } 
+.SkSheet>.Period thead>tr { height: 41px; } 
+.SkSheet>.Period .EditButton { width: 30px; }
+.SkSheet>.Period .JamNumber { width: 30px; } 
+.SkSheet>.Period .Jammer { width: 50px; } 
+.SkSheet>.Period .Narrow, .Period .SmallHead { width: 14px; } 
+.SkSheet>.Period .Trip, .Period .JamTotal, .Period .GameTotal { width: 9%; } 
+
+/* header row */
+.SkSheet>.Period thead th { font-size: 85%; background-color: #cccccc; color: #333333; } 
 .SkSheet>.Period .SmallHead>div { font-size: 75%; transform: rotate(270deg) translate(-50%); } 
-.SkSheet>.Period td { text-align: center; vertical-align: middle; } 
-.SkSheet>.Period tr { background-color: #FFF; height: 31px; } 
+.SkSheet>.Period #head { font-size: calc(200% - 1px); } 
+
+/* Colors & Borders*/
+.SkSheet>.Period tr { background-color: #FFF; } 
 .SkSheet>.Period tr.Darker { background-color: #e9f6da; } 
 .SkSheet>.Period tr.Timeout { background-color: #e0d0f0; height: 31px; } 
 .SkSheet>.Period tr.Timeout.Darker { background-color: #e0d0f0; } 
 .SkSheet>.Period tr .Darker { background-color: #e9f6da; } 
 .SkSheet>.Period tr.Darker .Darker { background-color: #d3ecb6; } 
-[sbSheetStyle]:not([sbSheetStyle="sheet"]) .SkSheet>.Period tr.SP td { border-bottom-style: dotted; } 
-[sbSheetStyle="sheet"] .SkSheet>.Period tr.SP td { border-top-style: dotted; } 
-[sbSheetStyle="sheet"] .SkSheet>.Period tr.Edits:not(.Before) td { border-top-style: dotted; } 
-[sbSheetStyle]:not([sbSheetStyle="sheet"]) .SkSheet>.Period tr.Edits:not(.Before) td { border-bottom-style: dotted; } 
-[sbSheetStyle="sheet"] .SkSheet>.Period tr.Edits.Before td { border-bottom-style: dotted; } 
-[sbSheetStyle]:not([sbSheetStyle="sheet"]) .SkSheet>.Period tr.Edits.Before td { border-top-style: dotted; } 
-.SkSheet>.Period .EditButton { width: 30px; background-color: #FFF; }
-.SkSheet>.Period .EditButton .ui-button { padding: .4em; }
-.SkSheet>.Period .JamNumber { width: 30px; } 
-.SkSheet>.Period .Overtime .JamNumber::after { font-size: 50%; content: "OT"; vertical-align: top; padding-left: 1px; } 
-.SkSheet>.Period .Jammer { width: 50px; } 
-.SkSheet>.Period .Jammer>span { width: 100%; height: 100%; } 
-.SkSheet>.Period .Narrow, .Period .SmallHead { width: 14px; } 
-.SkSheet>.Period #head { font-size: calc(200% - 1px); } 
-.SkSheet>.Period .Trip, .Period .JamTotal, .Period .GameTotal { width: 9%; } 
-.SkSheet>.Period .GameTotal, .SkSheet>.Period .JamTotal,.SkSheet>.Period .Lost, .SkSheet>.Period .Trip2 { border-left-width: 2px; } 
 .SkSheet>.Period tr .GameTotal { background-color: #d3ecb6; } 
-.SkSheet>.Period .hasAnnotation { position: relative; } 
-.SkSheet>.Period .hasAnnotation::after { position: absolute; right: 2px; top: 2px; height: 5px; width: 5px; background-color: red; content: ""; } 
+.SkSheet>.Period .GameTotal, .SkSheet>.Period .JamTotal,.SkSheet>.Period .Lost, .SkSheet>.Period [ScoringTrip="2"] { border-left-width: 2px; } 
 
+/* Edit Mode */
+.SkSheet>.Period tbody.Edit .EditButton .ui-button { background: #3f3; }
+.SkSheet>.Period .EditButton .ui-button { padding: .4em; }
+.SkSheet>.Period tbody:not(.Edit)>tr.Edits { display: none; }
+.SkSheet>.Period tbody:not(.Edit) .EditOnly { display: none; }
+.SkSheet>.Period tbody.Edit .NoEditOnly { display: none; }
+.SkSheet>.Period tr.IgnoreEdit .EditOnly { display: none; }
+.SkSheet>.Period td:not(.Used)>.UsedOnly { display: none; }
+.SkSheet>.Period td:not(.OtherUsed)>.OtherUsedOnly { display: none; }
+.SkSheet>.Period td.Used>.FirstUnusedOnly { display: none; }
+.SkSheet>.Period td.OtherUsed>.FirstUnusedOnly { display: none; }
+.SkSheet>.Period td:not(.Used) + td>.FirstUnusedOnly { display: none; }
+.SkSheet>.Period tr.HasSP .AddSP { display: none; }
+.SkSheet>.Period tr:not(.HasSP) .InitialSP { display: none; }
+
+/* Misc */
+.SkSheet>.Period .Overtime .JamNumber::after { font-size: 50%; content: "OT"; vertical-align: top; padding-left: 1px; } 
+.SkSheet>.Period tr:not(.IsOR) .OROnly { display:none; }
+
+#TripEditor .sbGroup { flex-wrap: wrap; gap: 0.5em; }
 #TripEditor input[type="number"] { width: 50px; } 
-#TripEditor table { width: 100%; } 
-#TripEditor td { padding: 0.25em; text-align: center; width: 33%; } 
-#TripEditor td.close { text-align: right; } 
 #TripEditor .header { font-weight: bold; } 
-#TripEditor .ui-button { font-size: 75%; } 
-#TripEditor .Invisible { visibility: hidden; } 
 
-#osOffsetEditor .Offset { width: 40px; } 
-#osOffsetEditor .Reason { margin: 0px 5px; } 
+#osOffsetEditor .Offset { width: 40px; }
