--- a/html/components/sk-sheet/index.html
+++ b/html/components/sk-sheet/index.html
@@ -1,61 +1,42 @@
 <div class="sbSegment" sbPrefix="t:[*]">
-  <div class="sbGroup SkSheet">
-    <table sbContext="^" sbForeach="Period: -0: comparePeriod" class="Period" cellpadding="0" cellspacing="0" border="1">
-      <col class="EditButton" />
-      <col class="JamNumber" />
-      <col class="Jammer" />
-      <col class="Narrow" />
-      <col class="Narrow" />
-      <col class="Narrow" />
-      <col class="Narrow" />
-      <col class="Narrow" />
-      <col class="Trip" />
-      <col class="Trip" />
-      <col class="Trip" />
-      <col class="Trip" />
-      <col class="Trip" />
-      <col class="Trip" />
-      <col class="Trip" />
-      <col class="Trip" />
-      <col class="Trip" />
-      <col class="JamTotal" />
-      <col class="GameTotal" />
+  <div class="sbGroup sbSheets SkSheet">
+    <table sbContext="^" sbForeach="Period: -0: _sbComparePeriod" class="Period">
       <thead class="sbShowOnSheet">
         <tr>
-          <td class="EditButton">EDIT</td>
-          <td class="JamNumber">JAM</td>
-          <td class="Jammer">JAMMER</td>
-          <td class="SmallHead"><div>LOST</div></td>
-          <td class="SmallHead"><div>LEAD</div></td>
-          <td class="SmallHead"><div>CALL</div></td>
-          <td class="SmallHead"><div>INJ</div></td>
-          <td class="SmallHead"><div>NI</div></td>
-          <td colspan="9" id="head"><span class="Team" sbDisplay="t.Name"></span></td>
-          <td class="JamTotal">JAM</td>
-          <td class="Gametotal">TOTAL</td>
+          <th class="AutoFit EditButton">EDT</th>
+          <th class="AutoFit JamNumber">JAM</th>
+          <th class="AutoFit Jammer">JMMR</th>
+          <th class="SmallHead"><div>LOST</div></th>
+          <th class="SmallHead"><div>LEAD</div></th>
+          <th class="SmallHead"><div>CALL</div></th>
+          <th class="SmallHead"><div>INJ</div></th>
+          <th class="SmallHead"><div>NI</div></th>
+          <th colspan="9" class="Team Autofit" sbDisplay="t.Name"></th>
+          <th class="AutoFit JamTotal">JAM</th>
+          <th class="AutoFit Gametotal">TOTAL</th>
         </tr>
       </thead>
-      <tbody>
-        <tr sbForeach="Jam:: compareJam" class="Edits Before">
-          <td class="EditButton"></td>
+      <tbody sbForeach="Jam:: _sbCompareJam: onInsert=sbReverseOnNonSheet" sbContext=":TeamJam([Team])" class="Jam">
+        <tr class="Edits" sbContext="^">
+          <td class="EditButton Darker"></td>
           <td colspan="18" class="Buttons Darker">
             <button
               class="RemoveJam"
-              sbClass="sbHide: TeamJam(*).JamScore, TeamJam(*).OsOffset, WalltimeStart, WalltimeEnd: notRemovable"
-              sbSet="Delete: toggleJamEdit"
+              sbClass="sbHide: TeamJam(*).JamScore, TeamJam(*).OsOffset, WalltimeStart, WalltimeEnd: sksNotRemovable"
+              sbSet="Delete: sksToggleEdit"
             >
               Remove Jam
             </button>
-            <span class="NoRemoveJamPoints" sbClass="sbHide: TeamJam(*).JamScore, TeamJam(*).OsOffset: noPoints"
+            <span class="NoRemoveJamPoints" sbClass="sbHide: TeamJam(*).JamScore, TeamJam(*).OsOffset: sksNoPoints"
               >Can't delete jam with points</span
             >
-            <span class="NoRemoveRunning" sbClass="sbHide: WalltimeStart, WalltimeEnd: notRunning">Can't delete running jam</span>
-            <button class="AddJam" sbSet="InsertBefore: toggleJamEdit" sbDisplay="Number: 'Insert New Jam Before Jam ' + v"></button>
+            <span class="NoRemoveRunning" sbClass="sbHide: WalltimeStart, WalltimeEnd: sksNotRunning">Can't delete running jam</span>
+            <button class="AddJam" sbSet="InsertBefore: sksToggleEdit" sbDisplay="Number: 'Insert New Jam Before Jam ' + v"></button>
           </td>
         </tr>
-        <tr class="Jam" sbContext=":TeamJam([Team])" sbForeach="Jam:: compareJam" sbClass="INJ: ^InjuryContinuation | Overtime: ^Overtime">
-          <td class="EditButton"><button sbCall="toggleJamEdit">✎</button></td>
-          <td class="JamNumber Darker" sbDisplay="Lead, ^Number, ^InjuryContinuation: checkInj"></td>
+        <tr class="Jam" sbClass="INJ: ^InjuryContinuation | Overtime: ^Overtime">
+          <td class="EditButton Darker"><button sbCall="sksToggleEdit">✎</button></td>
+          <td class="JamNumber Darker" sbDisplay="Lead, ^Number, ^InjuryContinuation: sbToJamNoDisplay"></td>
           <td class="Jammer">
             <span class="NoEditOnly" sbDisplay="Fielding(Jammer).SkaterNumber"></span>
             <select class="EditOnly" sbControl="Fielding(Jammer).Skater">
@@ -69,48 +50,43 @@
               ></option>
             </select>
           </td>
-          <td class="Lost Narrow Darker" sbControl="Lost: toX: fromX"></td>
-          <td class="Lead Narrow Darker" sbControl="Lead: toX: fromX"></td>
-          <td class="Calloff Narrow Darker" sbControl="Calloff, StarPass: toXnoSP: fromX"></td>
-          <td class="Injury Narrow Darker" sbControl="Injury, StarPass: toXnoSP: fromX"></td>
+          <td class="Lost Narrow Darker" sbControl="Lost: sbToX: sbFromX"></td>
+          <td class="Lead Narrow Darker" sbControl="Lead: sbToX: sbFromX"></td>
+          <td class="Calloff Narrow Darker" sbControl="Calloff, StarPass: sksToXnoSP: sbFromX"></td>
+          <td class="Injury Narrow Darker" sbControl="Injury, StarPass: sksToXnoSP: sbFromX"></td>
           <td
             class="NoInitial Narrow Darker"
             sbContext="ScoringTrip(1)"
-            sbClass="hasAnnotation: Annotation: notEmpty | Used: AfterSP: setAndFalse | OtherUsed: AfterSP"
-            sbDisplay="^NoInitial, AfterSP: toNiPreSp"
-            sbCall="openTripEditor"
+            sbClass="hasAnnotation: Annotation: sbIsNotEmpty | Used: AfterSP: sbIsSetAndFalse | OtherUsed: AfterSP"
+            sbDisplay="^NoInitial, AfterSP: sksToNiPreSp"
+            sbCall="sksOpenTripEditor"
           ></td>
           <td
             class="Trip"
             sbForeach="ScoringTrip: 2,3,4,5,6,7,8,9,10: only"
-            sbClass="hasAnnotation: Annotation: notEmpty | Used: AfterSP: setAndFalse | OtherUsed: AfterSP"
-            sbCall="openTripEditor"
+            sbClass="hasAnnotation: Annotation: sbIsNotEmpty | Used: AfterSP: sbIsSetAndFalse | OtherUsed: AfterSP"
+            sbCall="sksOpenTripEditor"
           >
             <button class="EditOnly UsedOnly" sbSet="Score: 1: change">+</button><br class="EditOnly UsedOnly" />
-            <span sbDisplay="Score, AfterSP, Current: toTripPoints"></span><br class="EditOnly UsedOnly" />
+            <span sbDisplay="Score, AfterSP, Current: sksToTripPoints"></span><br class="EditOnly UsedOnly" />
             <button class="EditOnly UsedOnly" sbSet="Score: -1: change">-</button><br class="EditOnly UsedOnly" />
             <button class="EditOnly UsedOnly" sbSet="Remove">X</button>
-            <button class="EditOnly OtherUsedOnly" sbSet="AfterSp: false" sbDisplay="-:toArrow"></button>
+            <button class="EditOnly OtherUsedOnly" sbSet="AfterSp: false" sbDisplay="-:sksToArrow"></button>
             <button class="EditOnly FirstUnusedOnly" sbSet="Score: 0">Add</button>
           </td>
           <td
             class="JamTotal"
-            sbClass="hasAnnotation: OsOffset, OsOffsetReason: hasOffset | sbClickMe: OsOffset, OsOffsetReason: hasUnexplainedOffset"
-            sbCall="showOffsetEditor"
-            sbDisplay="JamScore, AfterSPScore: toPreSpScore"
+            sbClass="hasAnnotation: OsOffset, OsOffsetReason: sksHasOffset | sbClickMe: OsOffset, OsOffsetReason: sksHasUnexplainedOffset"
+            sbCall="sksShowOffsetEditor"
+            sbDisplay="JamScore, AfterSPScore: sksToPreSpScore"
           ></td>
-          <td class="GameTotal" sbDisplay="TotalScore, AfterSPScore: toPreSpScore"></td>
+          <td class="GameTotal" sbDisplay="TotalScore, AfterSPScore: sksToPreSpScore"></td>
         </tr>
-        <tr
-          class="Jam SP"
-          sbContext=":TeamJam([Team])"
-          sbForeach="Jam:: compareJam"
-          sbClass="sbHide: ^StarPass: ! | IgnoreEdit: StarPass: !"
-        >
-          <td class="EditButton"></td>
-          <td class="JamNumber Darker" sbDisplay="StarPass: toSpJamNo"></td>
+        <tr class="SP" sbClass="sbHide: ^StarPass: ! | IgnoreEdit: StarPass: !">
+          <td class="EditButton Darker"></td>
+          <td class="JamNumber Darker" sbDisplay="StarPass: sbToSpJamNo"></td>
           <td class="Jammer">
-            <span class="NoEditOnly" sbDisplay="Fielding(Pivot).SkaterNumber, StarPass: emptyIfNoSp"></span>
+            <span class="NoEditOnly" sbDisplay="Fielding(Pivot).SkaterNumber, StarPass: sbToEmptyIfNoSp"></span>
             <select class="EditOnly" sbClass="sbHide: StarPass: !" sbControl="Fielding(Pivot).Skater">
               <option value="">?</option>
               <option
@@ -122,47 +98,43 @@
               ></option>
             </select>
           </td>
-          <td class="Lost Narrow Darker" sbControl="Lost: toX: fromX"></td>
-          <td class="Lead Narrow Darker" sbControl="Lead: toX: fromX"></td>
-          <td class="Calloff Narrow Darker" sbControl="Calloff, StarPass: toXifSP: fromX"></td>
-          <td class="Injury Narrow Darker" sbControl="Injury, StarPass: toXifSP: fromX"></td>
+          <td class="Lost Narrow Darker" sbControl="Lost: sbToX: sbFromX"></td>
+          <td class="Lead Narrow Darker" sbControl="Lead: sbToX: sbFromX"></td>
+          <td class="Calloff Narrow Darker" sbControl="Calloff, StarPass: sksToXifSP: sbFromX"></td>
+          <td class="Injury Narrow Darker" sbControl="Injury, StarPass: sksToXifSP: sbFromX"></td>
           <td
             class="NoInitial Narrow Darker"
             sbContext="ScoringTrip(1)"
-            sbClass="Used: AfterSP | OtherUsed: AfterSP: setAndFalse"
-            sbDisplay="^NoInitial, ^StarPass: toXifSP"
-            sbCall="openTripEditor"
+            sbClass="Used: AfterSP | OtherUsed: AfterSP: sbIsSetAndFalse"
+            sbDisplay="^NoInitial, ^StarPass: sksToXifSP"
+            sbCall="sksOpenTripEditor"
           ></td>
-          <td class="Trip" sbForeach="ScoringTrip: 2,3,4,5,6,7,8,9,10: only" sbClass="Used: AfterSP | OtherUsed: AfterSP: setAndFalse">
+          <td class="Trip" sbForeach="ScoringTrip: 2,3,4,5,6,7,8,9,10: only" sbClass="Used: AfterSP | OtherUsed: AfterSP: sbIsSetAndFalse">
             <button class="EditOnly UsedOnly" sbSet="Score: 1: change">+</button><br class="EditOnly UsedOnly" />
-            <span sbDisplay="Score, AfterSP, Current: toTripSpPoints" sbCall="openTripEditor"></span><br class="EditOnly UsedOnly" />
+            <span sbDisplay="Score, AfterSP, Current: sksToTripSpPoints" sbCall="sksOpenTripEditor"></span><br class="EditOnly UsedOnly" />
             <button class="EditOnly UsedOnly" sbSet="Score: -1: change">-</button><br class="EditOnly UsedOnly" />
             <button class="EditOnly UsedOnly" sbSet="Remove">X</button>
-            <button class="EditOnly OtherUsedOnly" sbSet="AfterSp" sbDisplay="-:toArrow"></button>
+            <button class="EditOnly OtherUsedOnly" sbSet="AfterSp" sbDisplay="-:sksToArrow"></button>
             <button class="EditOnly FirstUnusedOnly" sbSet="Score: 0">Add</button>
           </td>
           <td class="JamTotal" sbCall="showOffsetEditor" sbDisplay="AfterSPScore"></td>
           <td class="GameTotal" sbDisplay="TotalScore"></td>
         </tr>
-        <tr sbContext=":TeamJam([Team])" sbForeach="Jam:: compareJam" class="Edits" sbClass="HasSP: StarPass">
-          <td class="EditButton"></td>
+        <tr class="Edits" sbClass="HasSP: StarPass">
+          <td class="EditButton Darker"></td>
           <td colspan="18" class="Buttons Darker">
             <button class="AddSP" sbSet="StarPass">Add SP</button>
             <button class="InitialSP" sbToggle="ScoringTrip(1).AfterSP">SP on Initial</button>
             <button class="AddTO" sbSet="InsertTimeoutAfter: toggleJamEdit" sbDisplay="^Number: 'Insert Timeout After Jam ' + v"></button>
           </td>
         </tr>
-
-        <tr
-          class="Timeout sbShowOnOperator"
-          sbForeach="Timeout:: compareJam"
-          sbAttr="Jam: PrecedingJamNumber, WalltimeStart: toToJamNumber"
-          sbClass="IsOR: Review, Owner: isOrThisTeam"
-        >
-          <td class="EditButton"><button sbCall="toggleJamEdit">✎</button></td>
+      </tbody>
+      <tbody class="Timeout sbShowOnOperator" sbForeach="Timeout:: _sbCompareJam: onInsert=sbReverseOnNonSheet"" sbAttr="Jam: PrecedingJamNumber,WalltimeStart: sksToToJamNumber" >
+        <tr class="Timeout" sbClass="IsOR: Review, Owner: sksIsOrThisTeam">
+          <td class="EditButton"><button sbCall="sksToggleEdit">✎</button></td>
           <td colspan="9" class="Type">
-            <span class="NoEditOnly" sbDisplay="Owner, Review: toToTypeName"></span>
-            <select class="EditOnly" sbControl="Review, Owner: toToTypeVal: fromToTypeVal">
+            <span class="NoEditOnly" sbDisplay="Owner, Review: sksToToTypeName"></span>
+            <select class="EditOnly" sbControl="Review, Owner: sksToToTypeVal: sksFromToTypeVal">
               <option value=".false">Untyped Timeout</option>
               <option value="O.false">Official Timeout</option>
               <option
@@ -180,13 +152,9 @@
             </select>
           </td>
           <td colspan="4" class="Retained"><button class="OROnly" sbControl="RetainedReview">Retained</button></td>
-          <td colspan="5" class="Duration" sbDisplay="Running, Duration: toDuration"></td>
+          <td colspan="5" class="Duration" sbDisplay="Running, Duration: sksToToDuration"></td>
         </tr>
-        <tr
-          class="Edits Timeout sbShowOnOperator"
-          sbForeach="Timeout:: compareJam"
-          sbAttr="Jam: PrecedingJamNumber, WalltimeStart: toToJamNumber"
-        >
+        <tr class="Edits">
           <td class="EditButton"></td>
           <td colspan="18" class="Buttons">
             <button class="RemoveTO" sbSet="Delete">Remove Timeout</button>
@@ -199,38 +167,26 @@
 </div>
 
 <div id="sbTemplates">
-  <div id="TripEditor" sbContext="^Period(*).Jam(*).TeamJam([Team]).ScoringTrip(*)" sbClass="A: Id: closeIfNull">
-    <table>
-      <tr>
-        <td><input type="number" min="0" sbControl="Score" sbOn="keydown: remove" /></td>
-        <td><button sbToggle="AfterSP">After SP</button></td>
-      </tr>
-      <tr class="buttons">
-        <td><button sbSet="Remove">Remove Trip</button></td>
-        <td><button sbSet="InsertBefore">Insert Trip</button></td>
-      </tr>
-      <tr>
-        <td colspan="2"><hr /></td>
-      </tr>
-      <tr class="Annotation">
-        <td class="header">Notes:</td>
-        <td><button sbSet="Annotation: ''">Clear Notes</button></td>
-      </tr>
-      <tr class="Annotation">
-        <td colspan="2"><textarea cols="25" rows="4" sbControl="Annotation"></textarea></td>
-      </tr>
-      <tr>
-        <td colspan="2"><hr /></td>
-      </tr>
-      <tr class="buttons nav">
-        <td><button sbCall="openPrevTrip">⬅ Prev</button><button sbCall="openNextTrip">Next ➡</button></td>
-        <td class="close"><button sbCall="closeDialog">Close</button></td>
-      </tr>
-    </table>
+  <div id="TripEditor" sbContext="^Period(*).Jam(*).TeamJam([Team]).ScoringTrip(*)" sbClass="A: Id: sbCloseDialogIfNull">
+    <div class="sbSegment">
+      <div class="sbGroup">
+        <input type="number" min="0" sbControl="Score" sbOn="keydown: sksRemoveTrip" />
+        <button sbToggle="AfterSP">After SP</button>
+        <button sbSet="Remove">Remove Trip</button>
+        <button sbSet="InsertBefore">Insert Trip</button>
+      </div>
+      <div class="sbGroup">
+        <span class="header">Notes:</span>
+        <button sbSet="Annotation: ''">Clear Notes</button>
+        <textarea cols="25" rows="4" sbControl="Annotation"></textarea>
+      </div>
+    </div>
   </div>
 
-  <div id="osOffsetEditor" sbContext="^Period(*).Jam(*).TeamJam([Team])">
-    <input type="number" size="2" class="Offset" sbControl="OsOffset" />
-    <input type="text" size="40" class="Reason" sbControl="OsOffsetReason" />
+  <div id="osOffsetEditor" class="sbSegment" sbContext="^Period(*).Jam(*).TeamJam([Team])">
+    <div class="sbGroup">
+      <input type="number" size="2" class="Offset" sbControl="OsOffset" />
+      <input type="text" size="40" class="Reason" sbControl="OsOffsetReason" />
+    </div>
   </div>
 </div>
