--- a/html/nso/sk/index.css
+++ b/html/nso/sk/index.css
@@ -1,4 +1,6 @@
-body[showTeam="1"]>.Content > [Team="2"], body[showTeam="2"] > .Content > [Team="1"] { display: none; }
+body { user-select: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -o-user-select: none; }
+body[showTeam="1"]>.Content>[Team="2"], body[showTeam="2"]>.Content>[Team="1"] { display: none; }
+
 .Content { display: grid; grid: auto auto auto auto / 1fr 1fr; gap: 1px; }
 body[showTeam="1"]>.Content { grid-template-columns: 1fr 0; }
 body[showTeam="2"]>.Content { grid-template-columns: 0 1fr; }
@@ -9,4 +11,4 @@ body[showTeam="2"]>.Content { grid-template-columns: 0 1fr; }
 .Content>.Sheet { grid-row: 3 / 4; }
 .Content>.SettingsButton { grid-area: 4 / 1 / 5 / 3 }
 
-#OptionsDialog .Teams { flex-direction: column; } 
+#OptionsDialog .Teams { flex-direction: column; }
