--- a/html/views/wb/index.html
+++ b/html/views/wb/index.html
@@ -6,13 +6,7 @@
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
   </head>
-  <body>
-    <div
-      sbForeach="Team: 1,2: only"
-      sbContext="ScoreBoard.CurrentGame"
-      sbInclude="/components/plt-input/"
-      sbSheetStyle="whiteboard"
-      style="width: 50%; float: left"
-    ></div>
+  <body class="sbSegmentGroup" sbSheetStyle="whiteboard" sbContext="ScoreBoard.CurrentGame">
+    <div sbForeach="Team: 1,2: only" sbInclude="/components/plt-input/"></div>
   </body>
 </html>
